Html spacing fixed

--- a/styles/_livephoto.scss
+++ b/styles/_livephoto.scss
@@ -7,6 +7,8 @@
     .live-photo {
         flex: 1;
         margin: 1rem;
+        filter: grayscale(100%);
+        @include shadow;
     
         img {
             max-width: 100%;
